crates/ruff_python_parser/tests/snapshots/invalid_syntax@type_param_default_py312.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/type_param_default_py312.py
---
## AST

```
Module(
    ModModule {
        node_index: AtomicNodeIndex(..),
        range: 0..149,
        body: [
            TypeAlias(
                StmtTypeAlias {
                    node_index: AtomicNodeIndex(..),
                    range: 44..65,
                    name: Name(
                        ExprName {
                            node_index: AtomicNodeIndex(..),
                            range: 49..50,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 50..59,
                            node_index: AtomicNodeIndex(..),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 51..58,
                                        node_index: AtomicNodeIndex(..),
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 51..52,
                                            node_index: AtomicNodeIndex(..),
                                        },
                                        bound: None,
                                        default: Some(
                                            Name(
                                                ExprName {
                                                    node_index: AtomicNodeIndex(..),
                                                    range: 55..58,
                                                    id: Name("int"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: AtomicNodeIndex(..),
                            range: 62..65,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: AtomicNodeIndex(..),
                    range: 66..87,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("f"),
                        range: 70..71,
                        node_index: AtomicNodeIndex(..),
                    },
                    type_params: Some(
                        TypeParams {
                            range: 71..80,
                            node_index: AtomicNodeIndex(..),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 72..79,
                                        node_index: AtomicNodeIndex(..),
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 72..73,
                                            node_index: AtomicNodeIndex(..),
                                        },
                                        bound: None,
                                        default: Some(
                                            Name(
                                                ExprName {
                                                    node_index: AtomicNodeIndex(..),
                                                    range: 76..79,
                                                    id: Name("int"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                    parameters: Parameters {
                        range: 80..82,
                        node_index: AtomicNodeIndex(
                            0,
                        ),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: AtomicNodeIndex(..),
                                range: 84..87,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: AtomicNodeIndex(..),
                                        range: 84..87,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            ClassDef(
                StmtClassDef {
                    node_index: AtomicNodeIndex(..),
                    range: 88..111,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("C"),
                        range: 94..95,
                        node_index: AtomicNodeIndex(..),
                    },
                    type_params: Some(
                        TypeParams {
                            range: 95..104,
                            node_index: AtomicNodeIndex(..),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 96..103,
                                        node_index: AtomicNodeIndex(..),
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 96..97,
                                            node_index: AtomicNodeIndex(..),
                                        },
                                        bound: None,
                                        default: Some(
                                            Name(
                                                ExprName {
                                                    node_index: AtomicNodeIndex(..),
                                                    range: 100..103,
                                                    id: Name("int"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                    arguments: Some(
                        Arguments {
                            range: 104..106,
                            node_index: AtomicNodeIndex(..),
                            args: [],
                            keywords: [],
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: AtomicNodeIndex(..),
                                range: 108..111,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: AtomicNodeIndex(..),
                                        range: 108..111,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            ClassDef(
                StmtClassDef {
                    node_index: AtomicNodeIndex(..),
                    range: 112..148,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("D"),
                        range: 118..119,
                        node_index: AtomicNodeIndex(..),
                    },
                    type_params: Some(
                        TypeParams {
                            range: 119..141,
                            node_index: AtomicNodeIndex(..),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 120..121,
                                        node_index: AtomicNodeIndex(..),
                                        name: Identifier {
                                            id: Name("S"),
                                            range: 120..121,
                                            node_index: AtomicNodeIndex(..),
                                        },
                                        bound: None,
                                        default: None,
                                    },
                                ),
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 123..130,
                                        node_index: AtomicNodeIndex(..),
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 123..124,
                                            node_index: AtomicNodeIndex(..),
                                        },
                                        bound: None,
                                        default: Some(
                                            Name(
                                                ExprName {
                                                    node_index: AtomicNodeIndex(..),
                                                    range: 127..130,
                                                    id: Name("int"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 132..140,
                                        node_index: AtomicNodeIndex(..),
                                        name: Identifier {
                                            id: Name("U"),
                                            range: 132..133,
                                            node_index: AtomicNodeIndex(..),
                                        },
                                        bound: None,
                                        default: Some(
                                            Name(
                                                ExprName {
                                                    node_index: AtomicNodeIndex(..),
                                                    range: 136..140,
                                                    id: Name("uint"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                    arguments: Some(
                        Arguments {
                            range: 141..143,
                            node_index: AtomicNodeIndex(..),
                            args: [],
                            keywords: [],
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: AtomicNodeIndex(..),
                                range: 145..148,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: AtomicNodeIndex(..),
                                        range: 145..148,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Unsupported Syntax Errors

  |
1 | # parse_options: {"target-version": "3.12"}
2 | type X[T = int] = int
  |          ^^^^^ Syntax Error: Cannot set default type for a type parameter on Python 3.12 (syntax was added in Python 3.13)
3 | def f[T = int](): ...
4 | class C[T = int](): ...
  |


  |
1 | # parse_options: {"target-version": "3.12"}
2 | type X[T = int] = int
3 | def f[T = int](): ...
  |         ^^^^^ Syntax Error: Cannot set default type for a type parameter on Python 3.12 (syntax was added in Python 3.13)
4 | class C[T = int](): ...
5 | class D[S, T = int, U = uint](): ...
  |


  |
2 | type X[T = int] = int
3 | def f[T = int](): ...
4 | class C[T = int](): ...
  |           ^^^^^ Syntax Error: Cannot set default type for a type parameter on Python 3.12 (syntax was added in Python 3.13)
5 | class D[S, T = int, U = uint](): ...
  |


  |
3 | def f[T = int](): ...
4 | class C[T = int](): ...
5 | class D[S, T = int, U = uint](): ...
  |              ^^^^^ Syntax Error: Cannot set default type for a type parameter on Python 3.12 (syntax was added in Python 3.13)
  |


  |
3 | def f[T = int](): ...
4 | class C[T = int](): ...
5 | class D[S, T = int, U = uint](): ...
  |                       ^^^^^^ Syntax Error: Cannot set default type for a type parameter on Python 3.12 (syntax was added in Python 3.13)
  |
